--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "medvae"
-version = "0.1.6"
+version = "0.1.7"
 requires-python = ">=3.9"
 description = "MedVAE is a family of six medical image autoencoders that can encode high-dimensional medical images into latent representations."
 readme = "README.md"
@@ -67,7 +67,7 @@ dependencies = [
     "open_clip_torch==2.24.0",
     "polars>=0.19.10", # tested using 0.19.10
     "rich", # tested using 13.9.4
-    #"clip@git+https://github.com/openai/CLIP.git" # tested using 1.0
+    "clip@git+https://github.com/openai/CLIP.git" # tested using 1.0
 ]
 
 [project.urls]
